Updated CV and website structure

--- a/bff.Rmd
+++ b/bff.Rmd
@@ -17,7 +17,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-I have always ridden bikes and I have long been fascinated by how things work, you can see some of my work below. Once I moved to Geneva I started noticing the amount of nice vintage bikes and parts around, so I (mostly) build myself a single speed bike from a vintage frame I bought in a record store (out of all places)...
+I have always ridden bikes and I have long been fascinated by how things work. Once I moved to Geneva I started noticing the amount of nice vintage bikes and parts around, so I (mostly) build myself a single speed bike from a vintage frame I bought in a record store (out of all places)...
 
 $$\\[0.1cm]$$
 
@@ -25,7 +25,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-*But once the pandemic hits, things started to get more serious (since there was nothing else to do).*
+*Once the pandemic hits, things started to get more serious (since there was nothing else to do).*
 
 $$\\[0.1cm]$$
 
@@ -81,7 +81,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-This is my 1980 Alan Super Record frame with a set of Mavic Aksium wheels, Miche Pistard crankset, and a slick San Marco seat. If anyone ever tells you they will sand and polish an aluminum frame by hand, please discourage them very much ... but the bare aluminum look is awesome!
+This is my 1980 Alan Super Record frame with a set of Mavic Aksium wheels, Miche Pistard crankset, and a slick San Marco seat. If anyone ever tells you they will sand and polish an aluminum frame by hand, please discourage them very much ... but the look is awesome!
 
 $$\\[0.1cm]$$
 
@@ -141,7 +141,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-Sometimes a BFF asks for a cool vintage bike, so they get the coolest! Meet Roxanne, no red light needed. This is a 1985 Peugeot PH65 frame (the famous 103 carbolite tubing). I built this bike to last with a mix of great vintage parts. The beautiful wooden rack and a recycled bike bag make this a perfect ride for city commuting (or going anywhere really).
+Sometimes a BFF asks for a cool vintage bike, so they get the coolest! Meet Roxanne, no red light needed. This is a 1985 Peugeot PH65 frame (the infamous 103 carbolite tubing). I built this bike to last with a mix of great vintage parts. The beautiful wooden rack and a recycled bike bag make this a perfect ride for city commuting (or going anywhere really).
 
 $$\\[0.1cm]$$
 
