--- a/courses.Rmd
+++ b/courses.Rmd
@@ -42,4 +42,8 @@ $$\\[0.1cm]$$
 
 **Anti-Political Correctness and Authenticity: Authenticity performances in politics in Brazil and the United States** 
 
-Lecture for the Research Group on Elections and Political Citizenship (GREC) at the Université de Lausanne on 31 March 2022
+Lecture for the Research Group on Elections and Political Citizenship (GREC) at the Université de Lausanne, Lausanne, Switzerland, on 31 March 2022.
+
+**How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985**
+
+Invited talk at the Center for International Environmental Studies (CIES) Seminar at the Graduate Institute of International and Development Studies (IHEID), Geneva, Switzerland, on 27 October 2022.
