--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -25,63 +25,71 @@ library(kableExtra)
 
 # Profile
 
-I am currently a PhD candidate at the International Relations and Political Science Department at the Geneva Graduate Institute (IHEID). My dissertation leverages advanced text analysis techniques in R, such as supervised machine learning, to investigate how authenticity, problem construction, and urgency appear and change over time and across settings in discursive politics. I also work as a Research Assistant in the "PANARCHIC: Power and Network and the Rate of Change in Institutional Complexes" project held at the Center for International Environmental Studies (CIES). For the project, I develop, contribute, and help maintain several R packages that assist researchers dealing with multiple, overlapping, and uncertain datasets across various domains of global governance. During my free time, I restore vintage bikes.
+My research leverages advanced text analysis techniques, such as supervised machine learning, to investigate how authenticity, problem construction, and urgency appear and change over time and across settings in political discourses. I also develop, contribute, and help maintain several R packages that assist researchers dealing with multiple, overlapping, and uncertain datasets across various domains of global governance.
+
+<!-- \centerline{Interests: Political Sociology, Statistical Methods, Environmental Studies} -->
 
 # Education
 
 ```{r}
 tribble(~ Degree, ~ Year, ~ Institution, ~ Where, ~ Why,
-  "Doctorate in International Relations and Political Science", "Sep 2019 - Sep 2023 (expected)", "The Graduate Institute of International and Development Studies (IHEID)", "Geneva, Switzerland",
-  "GPA: 5.4/6
-  \\begin{itemize}
-     \\item Doctoral Project: 'Authenticity, problem construction, and urgency in political discourses' (Supervised by Dr. James Hollway and Dr. Yanina Welp)
-     \\item Core Courses: Doctoral Seminar; Survey Experiments; Social Networks; Statistics; Identity and Violence
-   \\end{itemize}",
-  "Masters in International Relations and Political Science", "Sep 2017 - Aug 2019",
-  "The Graduate Institute of International and Development Studies (IHEID)", "Geneva, Switzerland",
-  "GPA: 5.18/6
-   \\begin{itemize}
-     \\item Masters' Thesis: 'The Construction of a Migrant Crisis - The Venezuelan Migration to Brazil' (Supervised by Dr. Melanie Kolbe and Dr. Graziella Moraes Silva; Grade: 5.25)
-     \\item Core Courses: Research Design; Comparative Politics; Qualitative Methods; International Political Economy, Foreign Policy Analysis
-   \\end{itemize}",
+  "Doctorate in International Relations and Political Science",
+  "Sep 2019 -  2024",
+  "The Graduate Institute of International and Development Studies (IHEID)", 
+  "Geneva, Switzerland",
+  "\\textit{Doctoral Project:} 'Authenticity, problem construction, and urgency in political discourses' \\\\ Supervised by Dr. James Hollway and Dr. Yanina Welp
+  \\item \\textit{Core Courses:} Doctoral Seminar; Survey Experiments; Social Networks; Statistics; Identity and Violence",
+  "Masters in International Relations and Political Science",
+  "Sep 2017 - Aug 2019",
+  "The Graduate Institute of International and Development Studies (IHEID)",
+  "Geneva, Switzerland",
+  "\\textit{Masters' Thesis:} 'The Construction of a Migrant Crisis - The Venezuelan Migration to Brazil' \\\\ Supervised by Dr. Melanie Kolbe and Dr. Graziella Moraes Silva",
   "Bachelor of Arts in Political Science and Sociology (Double Degree) with a minor in Economics", "Jan 2013 - Jun 2017", "University of Alabama at Birmingham", "Birmingham, United States",
-  "GPA: 3.85/4
-   \\begin{itemize}
-     \\item Core Courses: Research in Political Science; International Sociology; Behavioral Economics; Social Statistics; Mind, Self and Society; Human Rights
-     \\item Awards: Recipient of 4 years of scholarship as a Student-Athlete for Soccer in a NCAA Division 1 University
-   \\end{itemize}") %>% 
-  detailed_entries(Degree, Year, Institution, Where, Why, .protect = FALSE)
+  "\\textit{Awards:} Recipient of 4 years of scholarship as a Student-Athlete for Soccer in a NCAA Division 1 University") %>% 
+  detailed_entries(Institution, Year, Degree, Where, Why, .protect = FALSE)
 ```
 
-# Selected Employment History
+# Research Experience
 
 ```{r}
+tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
+        "Research Assistant",
+        "Sep 2020 - Present","Center for International Environmental Studies (CIES)", "Geneva, Switzerland",
+        "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation (SNSF)
+        \\item Help with the development data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidating, and analyzing global governance data
+        \\item Train and manage research assistants to work with data colletion, R package development, GitHub branching, website design, and among other programmatic issues related to the project") %>%
+  detailed_entries(With, When, What, Where, Why, .protect = FALSE)
+# #long version (Selected Employment History)
 # tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
 #         "Research Assistant", "Sep 2020 - Present", "Center for International Environmental Studies (CIES)", "Geneva, Switzerland",
-#         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the project called 'Power and Networks and the Rate of Change in Institutional Complexes' (PANARCHIC), funded by the Swiss National Science Foundation (SNSF)
+#         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation (SNSF)
 #         \\begin{itemize}
 #         \\item Help develop data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidation, and analysis of global governance data.
-#         \\item Train and manage Masters' research assistants to work with data colletion, R programming and package development, GitHub branching, and other theoretical and practical issues related to the project.
+#         \\item Train and manage other research assistants to work with data colletion, R programming, package development, GitHub branching, and other theoretical and practical issues related to the project.
+#         \\end{itemize}",
+#         "Football Head Coach", "May 2018 - Aug 2020", "Intersoccer", "Geneva, Switzerland",
+#         "Ensured a safe and constructive environment for participants, coaches, and parents while promoting the benefits of sports
+#         \\begin{itemize}
+#         \\item Supervised coaches and participants throughout activities to ensure their safety.
+#         \\item Communicated with coaches, children, and parents to cordinate and solve logistical issues related to transportation, venue organization, and delivery of supplies, as well as any medical emergencies and other unexpected events that arose.
 #         \\end{itemize}") %>%
 #   detailed_entries(What, When, With, Where, Why, .protect = FALSE)
-# #long version
-tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
-        "Research Assistant", "Sep 2020 - Present", "Center for International Environmental Studies (CIES)", "Geneva, Switzerland",
-        "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation (SNSF)
-        \\begin{itemize}
-        \\item Help develop data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidation, and analysis of global governance data.
-        \\item Train and manage other research assistants to work with data colletion, R programming, package development, GitHub branching, and other theoretical and practical issues related to the project.
-        \\end{itemize}",
-        "Football Head Coach", "May 2018 - Aug 2020", "Intersoccer", "Geneva, Switzerland",
-        "Ensured a safe and constructive environment for participants, coaches, and parents while promoting the benefits of sports
-        \\begin{itemize}
-        \\item Supervised coaches and participants throughout activities to ensure their safety.
-        \\item Communicated with coaches, children, and parents to cordinate and solve logistical issues related to transportation, venue organization, and delivery of supplies, as well as any medical emergencies and other unexpected events that arose.
-        \\end{itemize}") %>%
-  detailed_entries(What, When, With, Where, Why, .protect = FALSE)
 ```
 
-\newpage
+# Publications and Working Papers
+
+```{r}
+tribble(~ Title, ~ Published, ~ Journal, 
+  "Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)",
+  "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics",
+  "Radiating Truthiness: Authenticity performances in politics in Brazil and the United States", "Under Review", "Political Studies",
+  "Managing imprecise dates in R with messydates (with James Hollway)",
+  "", "Working Paper",
+  "It is urgent that we look at urgency in politics",
+  "", "Working Paper") %>% 
+  detailed_entries(where = Journal, with = Title, what = Published,
+                   .protect = FALSE)
+```
 
 # Teaching
 
@@ -90,101 +98,104 @@ tribble(~ Course, ~ Where, ~ Date, ~ Why,
   "Fundamentals of R (co-lecturered with Livio Silva-Muller)",
   "The Graduate Institute of International and Development Studies (IHEID)",
   "Fall 2022, Spring 2023, Fall 2023 (upcoming)",
-  "This course offers masters' students a hands on introduction to data science using the R programming language and software. We teach students how to import, transform, analyze, and visualize various types of data in R. To help students think through data, we show practical applications of R for the analysis of environment, finance, and conflict data.",
+  "Provides a hands on introduction to data science using the R programming language and software
+  \\item Teaches students how to import, transform, analyze, and visualize various types of data in R
+  \\item Demonstrates practical applications of R for the analysis of environment, finance, and conflict data",
   "Intermediate R for Social Science Research",
   "The Graduate Institute of International and Development Studies (IHEID)",
   "Fall 2023 (upcoming)",
-  "This course offers masters' students an applied overview of various research methods using R. Students learn how to write, cite, and include table and figures using R Markdown; how to select and carry-on different types of statistical modeling; how to work with unsupervised approaches for text analysis; and how to code, visualize, and model network data.") %>% 
+  "Provides an applied introduction to various research methods using R
+  \\item Teaches students how to select and carry-on different types of statistical modeling; how to work with unsupervised approaches for text analysis; and how to code, visualize, and model network data") %>% 
   detailed_entries(what = Where, with = Course, where = Date, why = Why, .protect = FALSE)
 ```
 
-# Publications
+# Selected Conference Presentations
 
 ```{r}
-tribble(~ Title, ~ Published, ~ Journal,  ~ Why, 
-  "Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)", "Published online on 14 Jun 2023", "Environmental Politics",
-  "This article investigates how the Amazon has been constructed as a problem in Brazilian presidential speeches since 1985. We develop a framework that accounts for how important transnational actors, as presidents, construct policy objects as particular problems depending on where and when they participate in politics
-  \\begin{itemize}
-     \\item Methods: We create a dataset containing 6240 official speeches by all Brazilian presidents since 1985. We train a supervised machine learning algorithim to classify how Amazon related sections within speeches construct the Amazon as a problem.
-     \\item Findings: We find that presidents often construct the Amazon as an environmental problem when speaking far away from the region, whereas they usually construct it as problems of economic integration or social development when in the Amazon.
-   \\end{itemize}",
-  "Radiating Truthiness: Authenticity performances in politics in Brazil and the United States", "Under Review", "Political Studies",
-  "Political authenticity, as the perceived degree to which politicians appear to remain true to themselves, is connected to higher levels of political trust from electorates and can influence political outcomes. Yet, authenticity is frequently overlooked as a determinant factor for electoral behavior for being deemed vague, and, when considered, discussions of how authenticity appears and changes in politics usually remain at the theoretical level and are rarely comparative. This article develops an innovative framework to identify and compare how authenticity is performed in political discourses over time, across settings, and by politicians.
-     \\begin{itemize} 
-     \\item Methods: A total of 24,170 political texts from campaign rallies, debates, interviews, and official speeches for presidents and presidential candidates since the 1980s were scraped for Brazil and the United States, where authenticity in politics has drawn increased attention.
-     \\item Findings: The findings indicate that authenticity is not performed more frequently in election years.
-   \\end{itemize}",
-  "Managing imprecise dates in R with messydates (with James Holway)",
-  "", "Working Paper",
-  "Dates are often messy. Whether historical (or ancient), future, or even recent, we sometimes only know approximately when an event occurred, that it happened within a particular period, or sources offer multiple competing dates. Although researchers generally recognize this messiness, many feel expected to force artificial precision or unfortunate imprecision on temporal data to proceed with analysis. However, this can create inferential issues when timing or sequence is important. This paper introduces the messydates R package that assists researchers with this problem by retaining and working with various kinds of date imprecision.",
-  "It is urgent that we look at urgency in politics",
-  "", "Working Paper",
-  "Some scholars have argued that certain politicians sell fear, rather than hope, in political discourses. “Fear politics” embed individual and collective anxieties in discourses to defend change, or continuity, of certain political pathways against “negative” futures. Whereas “hope politics”, instead, indicate an affirmative attitude towards possible future as to justify change or reassure all will be. Both fear and hope in political discourses relate to change and continuity in constructing past(s), present(s), and future(s). By asking how discourses that “sell” fear or hope work, we can grasp with how, when, and where politicians argue for change and/or continuity when doing politics. In this article, I argue that understanding political discourses of change and continuity as performances of urgency provides an alternative approach to investigating and comparing politics over time and across spaces. I also develop a new framework and methods to study discursive performances of change and continuity in politics, namely urgency analysis.") %>% 
-  detailed_entries(where = Published, with = Title, what = Journal, why = Why,
-                   .protect = FALSE)
-```
-
-\newpage
-
-# Selected Conference Presentations and Invited Talks
-
-```{r}
-# # short version
-# tribble(~ Title, ~ Conference, ~ Where, ~ Date, ~ Type, 
-#   "How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985",
-#   "The Graduate Institute of International and Development Studies (IHEID)",
-#   "Geneva, Switzerland",
-#   "27 October 2022",
-#   "Center for International Environmental Studies (CIES) seminars",
-#   "Anti-PC and Authenticity: Authenticity performances in politics in Brazil and the United States",
-#   "American Sociological Association",
-#   "Los Angeles, United States",
-#   "6 August 2022",
-#   "Regular session on the 'Party and its base: Understanding the relationship between political professionals and their audiences'",
-#   "Performing Authenticity: Anti-Politically Correct Discourses in Brazil and the United
-# States",
-#   "Swiss Political Science Association",
-#   "Online",
-#   "4 February 2022",
-#   "Workshop session on 'Liberal Ideology and Cultural Backlash'") %>% 
-#   detailed_entries(what = Conference, with = Title, when = Date, where = Where, 
-#                    why = Type, .protect = FALSE)
-# Longer version
 tribble(~ Title, ~ Conference, ~ Where, ~ Date, ~ Type,
-  "How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985",
-  "The Graduate Institute of International and Development Studies (IHEID)",
-  "Geneva, Switzerland",
-  "27 October 2022",
-  "Center for International Environmental Studies (CIES) seminars",
   "Anti-PC and Authenticity: Authenticity performances in politics in Brazil and the United States",
   "American Sociological Association",
   "Los Angeles, United States",
-  "6 August 2022",
+  "August 2022",
   "Regular session on the 'Party and its base: Understanding the relationship between political professionals and their audiences'",
   "Amazonian Repertoires in Brazilian Presidential Discourse since 1985",
   "Latin American Studies Association",
   "Online",
-  "6 May 2022",
+  "May 2022",
   "Panel on the 'Forest Managements Conservation and Agricultural Production'",
-  "Anti-Political Correctness and Authenticity: Authenticity performances in politics in Brazil and the United States",
-  "Université de Lausanne",
-  "Lausanne, Switzerland",
-  "31 March 2022",
-  "Invited talk for the Research Group on Elections and Political Citizenship (GREC)",
   "Performing Authenticity: Anti-Politically Correct Discourses in Brazil and the United
 States",
   "Swiss Political Science Association",
   "Online",
-  "4 February 2022",
+  "February 2022",
   "Workshop session on 'Liberal Ideology and Cultural Backlash'",
   "The Construction of a Migratory Crisis: The Venezuelan Migration to Brazil",
   "Latin American Studies Association",
   "Online",
-  "15 May 2020",
+  "May 2020",
   "Panel on 'Las distintas violencias de las migraciones'") %>%
-  detailed_entries(what = Conference, with = Title, when = Date, where = Where,
+  detailed_entries(what = Conference, with = Title, when = Date,
+                   where = Where, why = Type, .protect = FALSE)
+```
+
+# Invited talks
+
+```{r}
+tribble(~ Title, ~ Talk, ~ Where, ~ Date, ~ Type,
+  "How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985",
+  "The Graduate Institute of International and Development Studies (IHEID)",
+  "Geneva, Switzerland",
+  "27 October 2022",
+  "Invited talk at the Center for International Environmental Studies (CIES) Seminar",
+  "Anti-Political Correctness and Authenticity: Authenticity performances in politics in Brazil and the United States",
+  "Université de Lausanne",
+  "Lausanne, Switzerland",
+  "31 March 2022",
+  "Invited talk for the Research Group on Elections and Political Citizenship (GREC)") %>%
+  detailed_entries(what = Talk, with = Title, when = Date, where = Where,
                    why = Type, .protect = FALSE)
 ```
+
+# Packages
+
+```{r}
+tribble(~ Name, ~ Purpose, ~ Status,
+        "\\href{https://manydata.ch/}{manydata}",
+        "An R portal for global governance data",
+        "Contributor",
+        "\\href{https://globalgov.github.io/messydates/}{messydates}",
+        "An R package for Extended Date/Time Format (EDTF)",
+        "Contributor",
+        "\\href{https://snlab-ch.github.io/manynet/}{manynet}",
+        "An R package to make, manipulate, and map myriad networks",
+        "Contributor",
+        "\\href{https://snlab-ch.github.io/migraph/}{migraph}",
+        "An R package with tools for multimodal and multilevel network analysis", 
+        "Contributor",
+        "\\href{https://globalgov.github.io/manypkgs/}{manypkgs}",
+        "An R package to support the creation of new many packages",
+        "Contributor",
+        "\\href{https://globalgov.github.io/manyenviron/}{manyenviron}",
+        "An R data package on environmental agreements",
+        "Contributor",
+        "\\href{https://globalgov.github.io/manystates/}{manystates}",
+        "An R data package on sovereign states",
+        "Contributor",
+        "\\href{https://github.com/henriquesposito/poldis}{poldis}",
+        "An R package with tools for analyzing political discourses over time", 
+        "Author") %>%
+  detailed_entries(what = Purpose, with = Name, when = Status,
+                   .protect = FALSE)
+```
+
+# Honors
+
+- UAB Presidential Honors List 2013, 2015, 2016 and 2017.
+- Conference USA Academic Honor Medal (2015)
+- National Soccer Coaches Association of America NCAA Scholar All-South Region Team (2016)
+- Conference USA Commissioner's Honor Roll (2013 – 2016)
+- Conference USA All-Academic Team (2016)
+- College Sports Information Directors of America Academic All-District Team (2016)
 
 # Skills
 
@@ -197,11 +208,25 @@ States",
 Portuguese (Native)    & R (Proficient)        & Markdown (Proficient) &  &  \\
 English (Fluent)       & Python (Intermediate) & LaTeX (Advanced)      &  &  \\
 French (Proficient)    & C (Basic)             & HTML (Advanced)       &  &  \\
-Italian (Intermidiate) & Bash (Basic)          & CSS (Intermidiate)    &  &  \\
+Italian (Intermediate) & Bash (Basic)          & CSS (Intermediate)    &  &  \\
 Spanish (Basic)        & Java (Basic)          & XML (Basic)           &  &  \\
                        &                       &                       &  & 
 \end{tabular}
 \end{table}
 ```
 
-***References available upon request.***
+# References
+
+```{r}
+tribble(~ Name, ~ Position, ~ Contact,
+        "\\href{https://jameshollway.com/}{James Hollway}", 
+        "Associate Professor of International Relations and Political Science at the Graduate Institute of International and Development Studies (IHEID)",
+        "Email: \\href{jameshollway@graduateinstitute.ch}{jameshollway@graduateinstitute.ch}",
+        "\\href{https://yaninawelp.wordpress.com/about-me/}{Yanina Welp}",
+        "Research Fellow Albert Hirschman Centre on Democracy",
+        "Email: \\href{yaninawelp@graduateinstitute.ch}{yaninawelp@graduateinstitute.ch}") %>%
+  detailed_entries(what = Position, why = Contact,
+                   with = Name, .protect = FALSE)
+```
+
+\center{*Additional references available upon request*}
