--- a/publications.Rmd
+++ b/publications.Rmd
@@ -32,7 +32,7 @@ $$\\[0.1cm]$$
 
 **"Radiating Truthiness": Authenticity performances in politics in Brazil and the United States** *(Revise and Resubmit in Political Studies)*
 
-Political authenticity, as the perceived degree to which politicians appear to remain true to themselves, is connected to higher levels of political trust from electorates and can influence political outcomes. Yet, authenticity is frequently overlooked as a determinant factor for electoral behavior for being deemed vague, and, when considered, discussions of how authenticity appears and changes in politics usually remain at the theoretical level and are rarely comparative. This article develops an innovative framework to identify and compare how authenticity is performed in political discourses over time, across settings, and by politicians. A total of 24,170 political texts from campaign rallies, debates, interviews, and official speeches for presidents and presidential candidates since the 1980s were scraped for Brazil and the United States, where authenticity in politics has drawn increased attention. The findings indicate that authenticity is not performed more frequently in election years.
+Political authenticity, as the perceived degree to which politicians appear to remain true to themselves, is connected to higher levels of political trust from electorates and can influence political outcomes. Yet, authenticity is frequently overlooked as a determinant factor for electoral behavior for being deemed vague, and, when considered, discussions of how authenticity appears and changes in politics usually remain at the theoretical level and are rarely comparative. This article develops an innovative framework to identify and compare how authenticity is performed in political discourses over time, across settings, and by politicians. Thousands of political texts from campaign rallies, debates, interviews, and official speeches for presidents and presidential candidates since the 1988 were scraped for Brazil and the United States, where authenticity in politics has drawn increased attention lately. Among other things, the findings indicate that authenticity is not performed more frequently in election years.
 
 $$\\[0.1cm]$$
 
