--- a/courses.Rmd
+++ b/courses.Rmd
@@ -46,4 +46,4 @@ Lecture for the Research Group on Elections and Political Citizenship (GREC) at 
 
 **How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985**
 
-Invited talk at the Center for International Environmental Studies (CIES) Seminar at the Graduate Institute of International and Development Studies (IHEID), Geneva, Switzerland, on 27 October 2022.
+Invited talk at the Centre for International Environmental Studies (CIES) Seminar at the Graduate Institute of International and Development Studies (IHEID), Geneva, Switzerland, on 27 October 2022.
