--- a/publications.Rmd
+++ b/publications.Rmd
@@ -32,7 +32,7 @@ $$\\[0.1cm]$$
 
 **"Radiating Truthiness": Authenticity performances in politics in Brazil and the United States** *(Revise and Resubmit in Political Studies)*
 
-Political authenticity, as the perceived degree to which politicians appear to remain true to themselves, is connected to higher levels of political trust from electorates and can influence political outcomes. Yet, authenticity is frequently overlooked as a determinant factor for electoral behavior for being deemed vague, and, when considered, discussions of how authenticity appears and changes in politics usually remain at the theoretical level and are rarely comparative. This article develops an innovative framework to identify and compare how authenticity is performed in political discourses over time, across settings, and by politicians. Thousands of political texts from campaign rallies, debates, interviews, and official speeches for presidents and presidential candidates since the 1988 were scraped for Brazil and the United States, where authenticity in politics has drawn increased attention lately. Among other things, the findings indicate that authenticity is not performed more frequently in election years.
+Political authenticity is connected to higher levels of political trust from electorates and can influence political outcomes but, for being deemed vague as a concept, it is often overlooked. To date, discussions of how authenticity appears and changes in politics typically remain at the theoretical level and are rarely comparative. This article develops an original framework to identify and compare how authenticity is performed in political discourses over time and across settings by politicians. To demonstrate the usefulness of the framework, this article investigates authenticity performances in 21,496 political texts of electoral debates, interviews, campaigns, and official speeches by presidents and presidential candidates in Brazil and the United States (US) since 1988. The findings indicate that authenticity is generally performed with greater frequency by presidents and presidential candidates in Brazil than in the US, though authenticity performances are not more prevalent during election years in either country
 
 $$\\[0.1cm]$$
 
