--- a/docs/CV/Sposito_CV.Rmd
+++ b/docs/CV/Sposito_CV.Rmd
@@ -54,14 +54,14 @@ tribble(~ Degree, ~ Year, ~ Institution, ~ Where, ~ Why,
 ```{r}
 tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
         "Research Assistant",
-        "Sep 2020 - Present","Center for International Environmental Studies (CIES)", "Geneva, Switzerland",
+        "Sep 2020 - Present","Centre for International Environmental Studies (CIES)", "Geneva, Switzerland",
         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation (SNSF)
         \\item Help with the development data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidating, and analyzing global governance data
         \\item Train and manage research assistants to work with data colletion, R package development, GitHub branching, website design, and among other programmatic issues related to the project") %>%
   detailed_entries(With, When, What, Where, Why, .protect = FALSE)
 # #long version (Selected Employment History)
 # tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
-#         "Research Assistant", "Sep 2020 - Present", "Center for International Environmental Studies (CIES)", "Geneva, Switzerland",
+#         "Research Assistant", "Sep 2020 - Present", "Centre for International Environmental Studies (CIES)", "Geneva, Switzerland",
 #         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation (SNSF)
 #         \\begin{itemize}
 #         \\item Help develop data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidation, and analysis of global governance data.
@@ -146,7 +146,7 @@ tribble(~ Title, ~ Talk, ~ Where, ~ Date, ~ Type,
   "The Graduate Institute of International and Development Studies (IHEID)",
   "Geneva, Switzerland",
   "October 2022",
-  "Invited talk at the Center for International Environmental Studies (CIES) Seminar",
+  "Invited talk at the Centre for International Environmental Studies (CIES) Seminar",
   "Anti-Political Correctness and Authenticity: Authenticity performances in politics in Brazil and the United States",
   "Université de Lausanne",
   "Lausanne, Switzerland",
